[tool.poetry]
name = "dataget"
version = "0.4.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.6"
httpx = "*"
numpy = "*"
pandas = "*"
idx2numpy = "*"
aiofiles = "*"
tqdm = "*"
pyarrow = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
pytest-sugar = "^0.9.2"
coverage = "^5.0.3"
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.0"
mkdocstrings = "^0.7.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
