[tool.poetry]
name = "dataget"
version = "0.4.5"
description = "A framework-agnostic datasets library for Machine Learning research and education."
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]
readme = "README.md"
repository = "https://github.com/cgarciae/dataget"
homepage = "https://cgarciae.github.io/dataget"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
kaggle = "^1.5.6"
httpx = "^0.11.1"
numpy = "^1.18.1"
aiofiles = "^0.4.0"
tqdm = "^4.42.1"
idx2numpy = "^1.2.2"
pandas = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-cov = "^2.8.1"
pytest-sugar = "^0.9.2"
coverage = "^5.0.3"
mkdocs = "^1.0.4"
mkdocs-material = "^4.6.0"
mkdocstrings = "^0.7.0"
matplotlib = "^3.2.0"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
